--- a/categorias.html
+++ b/categorias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Categorias</title>
 </head>
 <body>
     
@@ -33,7 +33,7 @@
                       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Iniciar Sesión</a></li>
                       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="#">Registrarse</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Ayuda</a></li>
+                      <li><a class="dropdown-item" href="ayuda.html">Ayuda</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
